Avoid warning about unthrown exception